# custom_converter

./: Makefile  README.md  build_converter.py  converter  converter.c  out.txt  out_test.txt  patch_converter.py  prompt.txt  pyproject.toml  result_10.txt  result_11.txt  result_12.txt  result_12_reformatted.txt  test_hindi_space  test_hindi_space.c  testbench10.txt  testbench11.txt  testbench12.txt
src/custom_converter/: __main__.py  converter_wrapper.py
src/custom_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/custom_converter/resources/: converter  converter.c
