[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-converter"
version = "1.0.0"
authors = [
  { name="Aryan Gahlot" },
]
description = "A custom encoding converter for UTF-8, Unicode, ISCII, and Acharya"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
custom-converter = "custom_converter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
custom_converter = ["resources/*.c"]
